--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -8,6 +8,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
+  <style>
+    body {
+      display: flex;
+      align-items: center;
+    }
+  </style>
 </head>
 
 <body>
@@ -15,18 +22,15 @@
   <%- include('../partials/header') %>
 
     <div class="caixa container p-4">
-      <!-- breadcrumb -->
-      <div class="pb-3 mt-2">
-        <%- include('../partials/breadcrumb', { pageTitle: 'Cadastrar Entrada' }) %>
-      </div>
 
       <div class=" border caixa-externa p-4 shadow-sm rounded">
         <form id="formulario-entrada" action="/entrada" method="post">
 
           <input id="id" type="hidden">
 
-          <div class="row align-items-center mb-3">
-            <h2 class="text-center text-success mb-3 mt-0 fw-bold">Formulário de Entrada</h2>
+          <div class="row align-items-center mb-3 px-3">
+            <h2 style="border-bottom: 4px solid orange;"
+            class="text-center text-white py-2 mt-0 fw-bold bg-success">Formulário de Entrada</h2>
           </div>
 
           <div id="row1" class="row">
