--- a/src/views/pages/pesquisaItensSaidos.ejs
+++ b/src/views/pages/pesquisaItensSaidos.ejs
@@ -1,5 +1,6 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,40 +8,42 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
 </head>
+
 <body>
   <!-- Navbar -->
   <%- include('../partials/header') %>
 
-  <div class="container-fluid">
-    <main>
-      <div class="table-container">
-        <div class="row mt-3">
-          <div class="mt-5 mb-3">
-            <h2 class="text-center text-success mb-3 mt-4 fw-bold">Pesquisar Itens Saídos do Estoque</h2>
+    <div class="container-fluid">
+      <main>
+        <div class="table-container">
+          <div class="row mt-3">
+            <div class="mt-5 mb-3 px-3">
+              <h2 class="text-center text-success mb-3 mt-0 fw-bold">Pesquisar Itens Saídos do Estoque</h2>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="table-container">
-        <form id="pesquisa-form" class="mb-4">
-          <div class="form-group">
-            <label for="ano">Ano:</label>
-            <input type="number" id="ano" name="ano" class="form-control" required>
-          </div>
-          <button type="submit" class="btn btn-primary">Pesquisar</button>
-        </form>
-        <div id="result" class="mt-3"></div>
-      </div>
-    </main>
-  </div>
+        <div class="table-container">
+          <form id="pesquisa-form" class="mb-4">
+            <div class="form-group">
+              <label for="ano">Ano:</label>
+              <input type="number" id="ano" name="ano" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Pesquisar</button>
+          </form>
+          <div id="result" class="mt-3"></div>
+        </div>
+      </main>
+    </div>
 
-  <script>
-    document.getElementById('pesquisa-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const ano = document.getElementById('ano').value;
-      const response = await fetch(`/itens-saidos-ano?ano=${ano}`);
-      const data = await response.json();
-      document.getElementById('result').innerHTML = `
+    <script>
+      document.getElementById('pesquisa-form').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const ano = document.getElementById('ano').value;
+        const response = await fetch(`/itens-saidos-ano?ano=${ano}`);
+        const data = await response.json();
+        document.getElementById('result').innerHTML = `
         <table class="table table-striped table-hover mb-0">
           <thead>
             <tr>
@@ -56,7 +59,8 @@
           </tbody>
         </table>
       `;
-    });
-  </script>
+      });
+    </script>
 </body>
-</html> -->
+
+</html>
