--- a/src/views/pages/qtde_disponivel_por_item.ejs
+++ b/src/views/pages/qtde_disponivel_por_item.ejs
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
     <style>
         .table-container {
             max-height: 65vh;
@@ -32,18 +33,17 @@
             background-color: #fff;
             z-index: 1;
         }
+
+        .w-90{
+            width: 90%;
+        }
     </style>
 </head>
 
 <body>
     <%- include('../partials/header') %>
 
-    <div class="caixa container p-4">
-
-        <!-- breadcrumb -->
-        <div class="pb-0 mt-2">
-            <%- include('../partials/breadcrumb', { pageTitle: 'Quantitativo' }) %>
-        </div>
+    <div class="caixa w-90 p-4 mx-auto">
 
         <div class="row d-flex justify-content-center mb-4">
             <div class="col-md-1 ms-3">
@@ -62,8 +62,9 @@
 
 
         <div class="border caixa-externa p-4 shadow-sm rounded">
-            <div class="row align-items-center mb-3">
-                <h2 class="text-center text-success mb-3 mt-0 fw-bold">Quantitativo</h2>
+            <div class="row align-items-center mb-3 px-3">
+                <h2 style="border-bottom: 4px solid orange;"
+                class="text-center text-white py-2 mt-0 fw-bold bg-success">Quantitativo</h2>
             </div>
             <div class="table-container">
                 <table class="table table-striped table-hover mb-0">
