--- a/src/views/pages/relatorios.ejs
+++ b/src/views/pages/relatorios.ejs
@@ -8,22 +8,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
+  <style>
+    
+    body {
+      display: flex;
+      align-items: center;
+    }
+
+    .w-90 {
+      width: 90%;
+    }
+  </style>
 </head>
 
 <body>
   <%- include('../partials/header') %>
 
-    <div class="caixa container p-4">
-      <!-- breadcrumb -->
-      <div class="pb-3 mt-2">
-        <%- include('../partials/breadcrumb', { pageTitle: 'Relatórios de Estoque' }) %>
-      </div>
+    <div class="caixa w-90 p-4 mx-auto">
 
       <div class=" border caixa-externa p-4 shadow-sm rounded">
         <div class="table-container">
           <div class="row">
             <div class="mb-3">
-              <h2 class="text-center text-success mt-3 mb-3 fw-bold"> Relatório de Entradas e Saidas </h2>
+              <h2 style="border-bottom: 4px solid orange;"
+              class="text-center text-white py-2 mt-0 fw-bold bg-success"> Relatório de Entradas e Saidas </h2>
             </div>
           </div>
         </div>
@@ -41,9 +50,9 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
+
 
     <script>
       async function carregarRelatorioEntradas() {
