--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
     <style>
         /* Adicionando estilos do modal */
         .table-container {
@@ -48,38 +49,37 @@
             opacity: 1;
         }
 
+        .w-90{
+            width: 90% !important;
+        }
+
     </style>
 </head>
 
 <body>
     <%- include('../partials/header') %>
     
-    <div class="caixa container p-4">
-     
-        <!-- breadcrumb -->
-        <div class="pb-0 mt-2">
-            <%- include('../partials/breadcrumb', { pageTitle: 'Estoque Geral' }) %>
-        </div>
+    <div class="caixa w-90 p-4 mx-auto">
 
-           
         <div class="row d-flex justify-content-center mb-4">
-            <div class="col-md-1 ms-3">
-                <a href="/tabela/estoqueatual" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold nav-link active py-2">Geral</a>
+            <div class="col-md-1 ">
+                <a href="/tabela/estoqueatual" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Geral</a>
             </div>
-            <div class="col-md-1 ms-3">
-                <a href="/tabela/itens-novos" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Novo</a>
+            <div class="col-md-1 ">
+                <a href="/tabela/itens-novos" class="btn btn-outline-success w-100 btn-header fw-bold">Itens Novo</a>
             </div>
-            <div class="col-md-1 ms-3">
-                <a href="/tabela/itens-usados" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Usados</a>
+            <div class="col-md-1 ">
+                <a href="/tabela/itens-usados" class="btn btn-outline-success w-100 btn-header fw-bold">Itens Usados</a>
             </div>
-            <div class="col-md-1 ms-3">
-                <a href="/qtde-unica" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Quantitativo</a>
+            <div class="col-md-1 ">
+                <a href="/qtde-unica" class="btn btn-outline-success w-100 btn-header fw-bold">Quantitativo</a>
             </div>
         </div>
 
         <div class="border caixa-externa p-4 shadow-sm rounded">
-            <div class="row align-items-center mb-3">
-                <h2 class="text-center text-success mb-3 mt-0 fw-bold">Estoque Geral</h2>
+            <div class="row align-items-center mb-3 px-3">
+                <h2 style="border-bottom: 4px solid orange;"
+                class="text-center text-white py-2 mt-0 fw-bold bg-success">Estoque Geral</h2>
             </div>
             <div class="table-container">
                 <table class="table table-striped table-hover mb-0">
