--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
   <style>
     .table-container {
       max-height: 78vh;
@@ -34,58 +35,76 @@
     .btn-action {
       width: 70px;
     }
+
+    body {
+      display: flex;
+      align-items: center;
+    }
+
+    .w-90 {
+      width: 90%;
+    }
   </style>
 </head>
 
 <body>
   <%- include('../partials/header') %>
 
-  <div class="caixa container p-4">
-    <!-- breadcrumb -->
-    <div class="pb-3 mt-2">
-      <%- include('../partials/breadcrumb', { pageTitle: 'Itens Pagos' }) %>
-    </div>
+    <div class="caixa w-90 p-4 mx-auto">
 
-    <div class="border caixa-externa p-4 shadow-sm rounded">
-      <div class="row align-items-center mb-3">
-        <h2 class="text-center text-success mb-3 mt-3 fw-bold">Itens que saíram do estoque</h2>
-      </div>
-      <div class="table-container">
-        <table class="table table-striped table-hover mb-0">
-          <thead>
-            <tr>
-              <th class="text-center">ID</th>
-              <th>Descrição</th>
-              <th class="text-center">Data da Saída</th>
-              <th class="text-center">Destino</th>
-              <th class="text-center">Referência</th>
-              <th class="text-center">Ações</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% if (itensPagos.length> 0) { %>
-              <% itensPagos.forEach(function(item) { %>
-                <tr>
-                  <td class="py-1 text-center"><%= item.id %></td>
-                  <td class="py-1"><%= item.descricao.toUpperCase() %></td> <!-- Descrição transformada para UPPERCASE -->
-                  <td class="py-1 text-center"><%= new Date(item.data_de_saida).toLocaleDateString('pt-BR') %></td>
-                  <td class="py-1 text-center"><%= item.destino.toUpperCase() %></td> <!-- Destino transformado para UPPERCASE -->
-                  <td class="py-1 text-center"><%= item.referencia.toUpperCase() %></td> <!-- Referência transformada para UPPERCASE -->
-                  <td class="py-1 text-center w-10">
-                    <button type="button" class="btn btn-secondary btn-sm btn-action" data-id="<%= item.id %>">Detalhes</button> <!-- Botão transformado para UPPERCASE -->
-                  </td>
-                </tr>
-                <% }); %>
-                  <% } else { %>
+      <div class="border caixa-externa p-4 shadow-sm rounded">
+        <div class="row align-items-center mb-3 px-3">
+          <h2 style="border-bottom: 4px solid orange;"
+          class="text-center text-white py-2 mt-0 fw-bold bg-success">Itens que saíram do estoque
+        </h2>
+        </div>
+        <div class="table-container">
+          <table class="table table-striped table-hover mb-0">
+            <thead>
               <tr>
-                <td colspan="11" class="text-center">Ainda não há itens Pagos</td>
+                <th class="text-center">ID</th>
+                <th>Descrição</th>
+                <th class="text-center">Data da Saída</th>
+                <th class="text-center">Destino</th>
+                <th class="text-center">Referência</th>
+                <th class="text-center">Ações</th>
               </tr>
-              <% } %>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <% if (itensPagos.length> 0) { %>
+                <% itensPagos.forEach(function(item) { %>
+                  <tr>
+                    <td class="py-1 text-center">
+                      <%= item.id %>
+                    </td>
+                    <td class="py-1">
+                      <%= item.descricao.toUpperCase() %>
+                    </td>
+                    <td class="py-1 text-center">
+                      <%= new Date(item.data_de_saida).toLocaleDateString('pt-BR') %>
+                    </td>
+                    <td class="py-1 text-center">
+                      <%= item.destino.toUpperCase() %>
+                    </td>
+                    <td class="py-1 text-center">
+                      <%= item.referencia.toUpperCase() %>
+                    </td>
+                    <td class="py-1 text-center w-10">
+                      <button type="button" class="btn btn-secondary btn-sm btn-action"
+                        data-id="<%= item.id %>">Detalhes</button>
+                    </td>
+                  </tr>
+                  <% }); %>
+                    <% } else { %>
+                      <tr>
+                        <td colspan="11" class="text-center">Ainda não há itens Pagos</td>
+                      </tr>
+                      <% } %>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
 
     <!-- JavaScript para exibição do modal -->
     <script>
