--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,10 +7,10 @@
   </style>
 </head>
 
-<nav class="navbar navbar-expand-lg py-3 navbar-light  d-flex justify-content-between">
+<nav class="navbar navbar-expand-lg py-3 navbar-light d-flex justify-content-between">
   <div class="container-fluid ">
     <div class="d-flex justify-content-between w-100 mx-5">
-      <div class="col-auto mt-1">
+      <div class="col-auto">
         <a class="navbar-brand text-white" href="/painel">CEGPA / Controle de Estoque</a>
       </div>
       <div class="col-auto d-flex align-items-center">
