--- a/src/views/pages/historicoMovimentacao.ejs
+++ b/src/views/pages/historicoMovimentacao.ejs
@@ -8,7 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
+  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico"
+    type="image/x-png" />
   <style>
     .table-container {
       max-height: 600px;
@@ -46,11 +47,6 @@
       width: 10%;
     }
 
-    body {
-      display: flex;
-      align-items: center;
-    }
-
     .w-90 {
       width: 90%;
     }
@@ -59,14 +55,27 @@
 
 <body>
   <%- include('../partials/header') %>
+  
     <div class="caixa w-90 p-4 mx-auto">
+
+      <div class="row d-flex justify-content-center mb-4">
+        <div class="col-md-1 ">
+          <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0">Entradas / Saida</a>
+        </div>
+        <div class="col-md-1 ">
+          <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold">Itens pagos</a>
+        </div>
+        <div class="col-md-1 ">
+          <a href="/historico-movimentacao-page" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Histórico</a>
+        </div>
+      </div>
 
       <div class=" border caixa-externa p-4 caixa-externa shadow-sm rounded">
         <div class="table-container">
           <div class="row">
-            <div class="mb-3">
-              <h2 style="border-bottom: 4px solid orange;"
-                class="text-center text-white py-2 mt-0 fw-bold bg-success"> Histórico de Movimentações </h2>
+            <div class="mb-3 px-3">
+              <h2 style="border-bottom: 4px solid orange;" class="text-center text-white py-2 mt-0 fw-bold bg-success">
+                Histórico de Movimentações </h2>
             </div>
           </div>
         </div>
