--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -289,18 +289,11 @@
                 </div>
             </a>
      
-            <a href="/estoque/itenspagos" class="system-box link">
-                <div>
-                    <i class="fas fa-boxes text-success fa-2x"></i>
-                    <h4 class="text-success">Itens que Sairam do estoque</h4>
-                    <p class="text-success">Itens Pagos</p>
-                </div>
-            </a>
             <a href="/relatorios" class="system-box link">
                 <div>
                     <i class="fas fa-chart-line text-success fa-2x"></i>
-                    <h4 class="text-success">Relatório de quantidade</h4>
-                    <p class="text-success">Relatórios</p>
+                    <h4 class="text-success">Relatório</h4>
+                    <p class="text-success">Relatórios de entrada e saida | Histórico</p>
                 </div>
             </a>
             <a href="/pesquisa-avancada-page" class="system-box link">
@@ -308,13 +301,6 @@
                     <i class="fas fa-search text-success fa-2x"></i>
                     <h4 class="text-success">Pesquisas</h4>
                     <p class="text-success">Pesquisa Avançada</p>
-                </div>
-            </a>
-            <a href="/historico-movimentacao-page" class="system-box link">
-                <div>
-                    <i class="fas fa-history text-success fa-2x"></i>
-                    <h4 class="text-success">Histórico Geral</h4>
-                    <p class="text-success">Histórico de Entradas / Saídas</p>
                 </div>
             </a>
             <a href="/logout" class="system-box logout link ">
