--- a/src/views/pages/pesquisaItensSaidos.ejs
+++ b/src/views/pages/pesquisaItensSaidos.ejs
@@ -8,12 +8,26 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
+  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico"
+    type="image/x-png" />
 </head>
 
 <body>
   <!-- Navbar -->
   <%- include('../partials/header') %>
+
+    <div class="row d-flex justify-content-center mb-4">
+      <div class="col-md-1 ">
+        <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Entradas e
+          Saida</a>
+      </div>
+      <div class="col-md-1 ">
+        <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold">Itens pagos</a>
+      </div>
+      <div class="col-md-1 ">
+        <a href="/historico-movimentacao-page" class="btn btn-outline-success w-100 btn-header fw-bold">Histórico</a>
+      </div>
+    </div>
 
     <div class="container-fluid">
       <main>
