--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tabela Com Estoque Atual</title>
+  <title>Itens Pagos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
+  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico"
+    type="image/x-png" />
   <style>
     .table-container {
       max-height: 78vh;
@@ -36,11 +37,6 @@
       width: 70px;
     }
 
-    body {
-      display: flex;
-      align-items: center;
-    }
-
     .w-90 {
       width: 90%;
     }
@@ -51,12 +47,23 @@
   <%- include('../partials/header') %>
 
     <div class="caixa w-90 p-4 mx-auto">
+      <div class="row d-flex justify-content-center mb-4">
+        <div class="col-md-1 ">
+          <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0 ">Entradas / Saida</a>
+        </div>
+        <div class="col-md-1 ">
+          <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active px-2 py-2">Itens pagos</a>
+        </div>
+        <div class="col-md-1 ">
+          <a href="/historico-movimentacao-page" class="btn btn-outline-success w-100 btn-header fw-bold">Histórico</a>
+        </div>
+      </div>
 
       <div class="border caixa-externa p-4 shadow-sm rounded">
         <div class="row align-items-center mb-3 px-3">
-          <h2 style="border-bottom: 4px solid orange;"
-          class="text-center text-white py-2 mt-0 fw-bold bg-success">Itens que saíram do estoque
-        </h2>
+          <h2 style="border-bottom: 4px solid orange;" class="text-center text-white py-2 mt-0 fw-bold bg-success">Itens
+            que saíram do estoque
+          </h2>
         </div>
         <div class="table-container">
           <table class="table table-striped table-hover mb-0">
@@ -139,7 +146,7 @@
                             <div class="card-body pb-0">
                               <h5 class="card-title">${item.descricao}</h5>
                               <p class="card-text">
-                                <h5 class="bg-primary text-white p-2">DADOS DA SAÍDA</h5> <!-- Texto da seção em UPPERCASE -->
+                                <h5 class="bg-danger text-white p-2">DADOS DA SAÍDA</h5> <!-- Texto da seção em UPPERCASE -->
                                 <strong>ID:</strong> ${item.id} <br/>
                                 <strong>TOMBO:</strong> ${item.tombo} <br/>
                                 <strong>DATA DA SAÍDA:</strong> ${new Date(item.data_de_saida).toLocaleDateString('pt-BR')} <br/>
