--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,17 +10,15 @@
 <nav class="navbar navbar-expand-lg py-3 navbar-light d-flex justify-content-between">
   <div class="container-fluid ">
     <div class="d-flex justify-content-between w-100 mx-5">
-      <div class="col-auto">
-        <a class="navbar-brand text-white" href="/painel">CEGPA / Controle de Estoque</a>
+      <div class="col-auto my-auto">
+        <a class="navbar-brand text-white" href="/painel">CEGPA / NUCPA</a>
       </div>
       <div class="col-auto d-flex align-items-center">
         <form class="d-flex align-items-center w-100">
           <a href="/tabela/estoqueatual" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Estoque</a>
           <a href="/entrada" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Entrada</a>
           <a href="/saida" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Saída</a>
-          <a href="/estoque/itenspagos" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Ítens Saídos</a>
           <a href="/relatorios" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Relatórios</a>
-          <a href="/historico-movimentacao-page" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Histórico</a>
           <a href="/pesquisa-avancada-page" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Pesquisa</a>
         </form>
       </div>
@@ -28,17 +26,10 @@
         <a style="border: 1px solid #fff;" href="/logout" class="btn btn-danger mx-2 w-100 btn-header fw-bold">
           <i class="fas fa-door-open  me-1 fa-2x"></i> Sair
       </a>
-      
       </div>
     </div>
   </div>
 </nav>
-
-<style>
-  .navbar{
-    background: linear-gradient(to right, #00621D, #0BA23D);
-  }
-</style>
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
@@ -53,15 +44,16 @@
       }
     });
   });
-
 </script>
 
 
 <style>
   .navbar a.active {
     background-color: #fffefc;
-    /* Cor de fundo para o botão ativo */
     color: green;
-    /* Cor do texto */
+  }
+
+  .navbar{
+    background: linear-gradient(to right, #00621D, #0BA23D);
   }
 </style>
